assets/css/academic.css
/* ... */
body, html {
  height: 100%;
}

body {
  font-family: "Roboto", "Inter", Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 300;
  color: #111;
  background-color: #f9f9f9;
  -webkit-text-size-adjust: 100%;
}

h1, h2, h3, h4, h5, h6, p, blockquote, pre, ul, ol, dl, figure, .highlight {
  margin-bottom: 15px;
}

img {
  max-width: 100%;
  vertical-align: middle;
}

ul, ol {
  margin-left: 30px;
}

li > ul, li > ol {
  margin-bottom: 0;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: 300;
}

a {
  color: #2a7ae2;
  text-decoration: none;
}

a:visited {
  color: #1756a9;
}

a:hover {
  color: #111;
  text-decoration: underline;
}

/* ===== Wrapper Container ===== */
.wrapper {
  max-width: calc(1024px - 60px);
  margin-right: auto;
  margin-left: auto;
  padding-right: 30px;
  padding-left: 30px;
}

@media screen and (max-width: 800px) {
  .wrapper {
    max-width: calc(1024px - 30px);
    padding-right: 15px;
    padding-left: 15px;
  }
}

.wrapper:after {
  content: "";
  display: table;
  clear: both;
}

/* ===== Site Header ===== */
.site-header {
  border-top: 3px solid #9b3022;
  border-bottom: 1px solid #e4eaf2;
  min-height: 36px;
  position: relative;
  background: #f9f9f9;
}

.site-title {
  font-size: 26px;
  font-weight: 400;
  font-family: 'Roboto', sans-serif;
  line-height: 56px;
  letter-spacing: -1px;
  margin-bottom: 0;
  float: left;
  color: #002336;
}

.site-nav {
  display: flex;
  justify-content: center;
  line-height: 36px;
  z-index: 3;
}

.site-nav .menu-icon {
  display: none !important;
}

/* Hide the greedy-nav hamburger button on desktop */
.greedy-nav button {
  display: none !important;
}

.site-nav .page-link {
  font-weight: 400;
  color: #002336;
  line-height: 1.5;
}

.site-nav .page-link:not(:first-child) {
  margin-left: 20px;
}

@media screen and (max-width: 600px) {
  .site-nav {
    position: absolute;
    top: 9px;
    right: 30px;
    background-color: #f9f9f9;
    border: 1px solid #e8e8e8;
    border-radius: 5px;
    text-align: right;
  }
  .site-nav .menu-icon {
    display: block;
    float: right;
    width: 36px;
    height: 26px;
    line-height: 0;
    padding-top: 10px;
    text-align: center;
  }
  .site-nav .trigger {
    clear: both;
    display: none;
  }
  .site-nav:hover .trigger {
    display: block;
    padding-bottom: 5px;
  }
  .site-nav .page-link {
    display: block;
    padding: 5px 10px;
  }
}

/* ===== Profile Card ===== */
.cover {
  position: relative;
  overflow: hidden;
  max-width: 100%;
  height: 550px;
  margin-right: auto;
  margin-left: auto;
  background-color: #1a1a2e;
}

.bg-layer {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center 80%;
  z-index: 0;
  transition: opacity 1.5s ease-in-out;
}

#bg-layer-1 {
  background-image: url('/images/stars-bg/star-01.jpg');
  opacity: 1;
  z-index: 1;
}

#bg-layer-2 {
  opacity: 0;
  z-index: 2;
}

@media screen and (max-width: 600px) {
  .cover {
    height: 580px;
  }
}

.profile-wrapper {
  border-radius: 25px;
  position: relative;
  top: 20%;
  width: 600px;
  margin-left: auto;
  margin-right: auto;
  background-color: rgba(255, 255, 255, 0.9);
  z-index: 1;
}

@media screen and (max-width: 600px) {
  .profile-wrapper {
    top: 5%;
    width: calc(90% - 15px);
  }
}

.profile-col {
  float: left;
  margin: 30px auto;
  text-align: center;
}

.profile-col-1 {
  width: calc(40% - 15px);
}

.profile-col-2 {
  width: calc(60% - 15px);
}

@media screen and (max-width: 600px) {
  .profile-col {
    position: relative;
    margin: 10px auto;
    float: none;
    width: 100%;
  }
}

.circle-img {
  margin: 0 auto;
  width: 168px;
  border-width: 4px;
  border-style: solid;
  border-radius: 50%;
  border-color: #292929;
}

#my-name {
  font-size: 32px;
  font-weight: bold;
  color: #292929;
}

#my-title {
  font-size: 24px;
  color: #292929;
  font-weight: 200;
  margin-top: 14px;
}

@media screen and (max-width: 600px) {
  #my-title {
    display: none;
  }
}

/* ===== Social Icons ===== */
.icon-button {
  background-color: white;
  border-radius: 3.2rem;
  cursor: pointer;
  display: inline-block;
  font-size: 1.8rem;
  height: 3.2rem;
  line-height: 3rem;
  margin: 0 5px;
  position: relative;
  text-align: center;
  top: 25px;
  width: 3.2rem;
}

.icon-button span {
  border-radius: 0;
  display: block;
  height: 0;
  left: 50%;
  margin: 0;
  position: absolute;
  top: 50%;
  transition: all 0.3s;
  width: 0;
}

.icon-button:hover span {
  width: 3.2rem;
  height: 3.2rem;
  border-radius: 3.2rem;
  margin: -1.5rem;
}

.github span { background-color: #000; }
.linkedin span { background-color: #0077B5; }
.twitter span { background-color: #4099ff; }

.icon-button i {
  background: none;
  color: white;
  height: 3.2rem;
  left: 0;
  line-height: 3.2rem;
  position: absolute;
  top: 0;
  transition: all 0.3s;
  width: 3.2rem;
  z-index: 10;
}

.icon-button .icon-github { color: #000; }
.icon-button .icon-linkedin { color: #0077B5; }
.icon-button .icon-twitter { color: #4099ff; }

.icon-button:hover .icon-github,
.icon-button:hover .icon-linkedin,
.icon-button:hover .icon-twitter {
  color: white;
}

/* ===== Page Content ===== */
.page-content {
  padding: 30px 0;
}

/* ===== Bio Section ===== */
.bio {
  max-width: calc(100% - 15px);
  margin-top: 10px;
  margin-bottom: 10px;
  margin-left: auto;
  margin-right: auto;
}

.bio-body {
  margin: 5px;
  padding: 0;
}

.bio + .bio {
  margin-top: 56px;
}

.md-heading {
  font-size: 24px;
  font-weight: 400;
  color: #3b4a5c;
  letter-spacing: 0.04em;
}

.md-heading i {
  margin-right: 12px;
  color: #6c86ad;
}

.bio-highlight {
  margin-top: 12px;
  padding: 16px 20px;
  border-left: 3px solid #6c86ad;
  border-radius: 6px;
  background: #f6f8fc;
  color: #2f3a47;
  line-height: 1.6;
}

.bio-highlight a {
  color: #305d96;
  font-weight: 500;
}
/* ... */

